apps/notifications-html/notifications-html.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notifications-html
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-html
  namespace: notifications-html
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: notifications-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-html
  namespace: notifications-html
  labels:
    app: notifications-html
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-html
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: notifications-html
    spec:
      containers:
        - name: workload
          image: paulcarltondae/notifications-html:0.1.1 # {"$imagepolicy": "flux-system:notifications-html"}
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
